# notifier-host

./: Cargo.toml  README.md
src/: host.rs  icon.rs  item.rs  lib.rs  watcher.rs
src/proxy/: dbus_status_notifier_item.rs  dbus_status_notifier_item.xml  dbus_status_notifier_watcher.rs  mod.rs
