[package]
name = "notifier-host"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "SystemNotifierHost implementation"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"

[dependencies]
dbusmenu-gtk3 = "0.1.0"
quick-xml = { version = "0.37.1", features = ["serialize"] }
serde = "1.0.215"
gtk = "0.18"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
zbus = { version = "3.7.0", default-features = false, features = ["tokio"] }
